--- a/source/less/index/popular-desc.less
+++ b/source/less/index/popular-desc.less
@@ -77,6 +77,10 @@
     margin-top: 124px;
   }
 
+  .popular-desc__img {
+    margin-top: -100px;
+  }
+
   .popular-desc__img img:nth-child(1) {
     display: none;
   }
