--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -39,6 +39,10 @@
     background-position: left;
     padding: 82px 0 47px 50px;
     margin: 0 0 68px -50px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index/review-tablet@2x.png");
+    }
   }
 
   .reviews__title {
@@ -67,6 +71,10 @@
   .reviews {
     margin: 0 0 70px 0;
     padding: 78px 0 96px 175px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index/review-desktop@2x.png");
+    }
   }
 
   .reviews__title h2 {
