--- a/source/less/general/interface.less
+++ b/source/less/general/interface.less
@@ -20,7 +20,7 @@
   box-sizing: border-box;
 }
 
-body {
+
   font-family: "Open Sans", sans-serif;
 }
 
@@ -51,5 +51,13 @@ button {
 @media (min-width: @tablet-width) {
   .container {
     padding: 0 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .container {
+    padding: 0 50px;
+    max-width: 1150px;
+    margin: 0 auto;
   }
 }
