--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -6,17 +6,20 @@
   background-position: center;
   background-size: cover;
 
-  padding: 90px 30px 193px;
+  padding: 67px 30px 193px;
   font-weight: @bold;
   font-size: 27px;
   line-height: 30px;
   color: #000000;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/index/hero-mobile@2x.jpg");
+  }
 }
 
 .main__title--background-grey {
   background-color: #f1f1f1;
   background-image: none;
-  padding: 101px 0 75px 0;
   font-weight: @bold;
   font-size: 27px;
   line-height: 30px;
@@ -83,18 +86,6 @@
     margin: 0 -50px;
     font-size: 43px;
     line-height: 50px;
-  }
-
-  .main__title--background-grey {
-    background-color: #f1f1f1;
-    background-image: none;
-    padding: 101px 0 75px 0;
-    font-weight: @bold;
-    font-size: 27px;
-    line-height: 30px;
-    color: #000000;
-    text-align: center;
-    margin: 0 -50px;
   }
 
   .main__list {
