--- a/source/less/general/header.less
+++ b/source/less/general/header.less
@@ -59,5 +59,18 @@
       max-width: 150px;
       margin: auto;
     }
+
+    &--desktop svg {
+      transition-timing-function: ease-out;
+      transition-duration: 0.1s;
+    }
+
+    &--desktop svg:hover {
+      opacity: 0.6;
+    }
+
+    &--desktop svg:active {
+      opacity: 0.3;
+    }
   }
 }
