--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -1,7 +1,7 @@
 .main__title {
   text-align: center;
 
-  background-image: url("../img/index/hero-mobile.jpg");
+  background-image: url("../img/index/hero-mobile.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -13,7 +13,7 @@
   color: #000000;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/index/hero-mobile@2x.jpg");
+    background-image: url("../img/index/hero-mobile@2x.webp");
   }
 }
 
@@ -78,7 +78,7 @@
   .main__title {
     text-align: center;
 
-    background-image: url("../img/index/hero-desktop.jpg");
+    background-image: url("../img/index/hero-tablet.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -89,7 +89,7 @@
     line-height: 50px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/index/hero-tablet@2x.jpg");
+      background-image: url("../img/index/hero-tablet@2x.webp");
     }
   }
 
@@ -120,7 +120,7 @@
 
 @media (min-width: @desktop-width) {
   .main__title {
-    background-image: url("../img/index/hero-desktop-2.jpg");
+    background-image: url("../img/index/hero-desktop.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -130,7 +130,7 @@
     padding: 150px 0 433px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/index/hero-desktop@2x.jpg");
+      background-image: url("../img/index/hero-desktop@2x.webp");
     }
   }
 
