--- a/source/less/index/info.less
+++ b/source/less/index/info.less
@@ -22,43 +22,37 @@
   align-items: flex-start;
   justify-content: space-between;
 
-  &--flower::before {
-    content: url("../img/index/icon-1.svg");
+  &--flower svg {
     margin-bottom: 16px;
     width: 33px;
     height: 38px;
   }
 
-  &--bill::before {
-    content: url("../img/index/icon-3.svg");
+  &--bill svg {
     margin-bottom: 26px;
     width: 47px;
     height: 27px;
   }
 
-  &--heart::before {
-    content: url("../img/index/icon-5.svg");
+  &--heart svg {
     margin-bottom: 21px;
     width: 34px;
     height: 27px;
   }
 
-  &--ball::before {
-    content: url("../img/index/icon-2.svg");
+  &--ball svg {
     margin-bottom: 17px;
     width: 35px;
     height: 34px;
   }
 
-  &--rocket::before {
-    content: url("../img/index/icon-4.svg");
+  &--rocket svg {
     margin-bottom: 26px;
     width: 55px;
     height: 23px;
   }
 
-  &--gift::before {
-    content: url("../img/index/icon-6.svg");
+  &--gift svg {
     margin-bottom: 20px;
     width: 33px;
     height: 32px;
