--- a/source/less/catalog/text-production.less
+++ b/source/less/catalog/text-production.less
@@ -72,7 +72,7 @@
     display: flex;
   }
 
-  .text-production__title img {
+  .text-production__title svg {
     margin-right: 33px;
   }
 
@@ -111,7 +111,7 @@
     max-width: 200px;
   }
 
-  .text-production__title img {
+  .text-production__title svg {
     margin-bottom: 27px;
   }
 }
