--- a/source/less/general/header-menu.less
+++ b/source/less/general/header-menu.less
@@ -33,6 +33,7 @@
   .header-menu__item svg {
     position: absolute;
     left: 35px;
+    opacity: 0.2;
   }
 
   .header-menu__item a {
@@ -104,6 +105,7 @@
 .header-menu__list-visible .header-menu__item svg {
   position: absolute;
   left: 35px;
+  opacity: 0.2;
 }
 
 .header-menu__item a {
