--- a/source/less/general/zigzag.less
+++ b/source/less/general/zigzag.less
@@ -1,58 +1,66 @@
 .zigzag-fill {
-  display: none;
-  border: 0;
-  position: relative;
-  height: 24px;
-  margin: -23px -50px 0;
+  &--desktop {
+    display: none;
+  }
+
+  &--tablet {
+    display: none;
+  }
 }
 
 .zigzag-line {
-  display: none;
-  border: 0;
-  position: relative;
-  height: 24px;
-  margin-right: -50px;
-  margin-left: -50px;
+  &--desktop,
+  &--tablet {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .zigzag-fill {
-    display: block;
-  }
+    margin-top: -23px;
+    margin-left: -50px;
 
-  .zigzag-fill::after {
-    position: absolute;
-    content: url("../img/index/zigzag-fill-tablet.svg");
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 24px;
+    &--tablet {
+      display: block;
+    }
   }
 
   .zigzag-line {
-    display: block;
-  }
+    &--desktop,
+    &--mobile {
+      display: none;
+    }
 
-  .zigzag-line::after {
-    position: absolute;
-    content: url("../img/index/zigzag-line-tablet.svg");
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 24px;
+    &--tablet {
+      display: block;
+      margin-left: -50px;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
-  .zigzag-fill::after {
-    content: url("../img/index/zigzag-fill-desktop.svg");
+  .zigzag-fill {
+    margin-top: -26px;
+    margin-left: -50px;
+
+    &--tablet {
+      display: none;
+    }
+
+    &--desktop {
+      display: block;
+    }
   }
 
   .zigzag-line {
-    margin: 0;
-  }
+    &--tablet,
+    &--mobile {
+      display: none;
+    }
 
-  .zigzag-line::after {
-    content: url("../img/index/zigzag-line-desktop.svg");
+    &--desktop {
+      display: block;
+      // margin-left: -50px;
+    }
   }
 }
