--- a/source/less/index/contact.less
+++ b/source/less/index/contact.less
@@ -111,13 +111,10 @@
     color: rgba(255, 255, 255, 0.3);
   }
 
-  .contact__title::after {
-    content: url("../img/index/flag.svg");
-  }
-
   .contact__title {
     display: flex;
     align-items: center;
+    flex-direction: row-reverse;
     justify-content: space-between;
   }
 }
@@ -138,7 +135,7 @@
 
   .contact__title {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
     position: relative;
   }
@@ -148,7 +145,7 @@
     line-height: 57px;
   }
 
-  .contact__title::after {
+  .contact__title svg {
     position: absolute;
     left: -40%;
   }
