--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -1,7 +1,7 @@
 .main__title {
   text-align: center;
 
-  background-image: url("../img/index/hero-mobile.webp");
+  background-image: url("../img/index/hero-mobile@2x.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -11,10 +11,6 @@
   font-size: 27px;
   line-height: 30px;
   color: #000000;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/index/hero-mobile@2x.webp");
-  }
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/index/hero-mobile@2x.webp");
@@ -83,7 +79,7 @@
   .main__title {
     text-align: center;
 
-    background-image: url("../img/index/hero-tablet.webp");
+    background-image: url("../img/index/hero-tablet@2x.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -134,7 +130,7 @@
 
 @media (min-width: @desktop-width) {
   .main__title {
-    background-image: url("../img/index/hero-desktop.webp");
+    background-image: url("../img/index/hero-desktop@2x.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
