--- a/source/less/form/product.less
+++ b/source/less/form/product.less
@@ -17,8 +17,9 @@
   font-size: 13px;
   line-height: 24px;
   color: #444444;
-  margin-bottom: 30px;
+  margin-bottom: 29px;
   margin-top: 17px;
+  max-width: 261px;
 }
 
 .product__form-options .form__filter {
@@ -32,10 +33,10 @@
   border: 2px solid #444444;
   font-weight: @bold;
   font-size: 17px;
-  line-height: 52px;
+  line-height: 48px;
   color: #444444;
   display: block;
-  margin-top: 30px;
+  margin-top: 28px;
   margin-bottom: 55px;
   width: 260px;
   text-transform: uppercase;
@@ -61,11 +62,12 @@
   height: 52px;
   outline: none;
   font-weight: 400;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 18px;
   color: #444444;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
+  letter-spacing: 0.4px;
 }
 
 .product__input input::placeholder {
@@ -85,7 +87,7 @@
 }
 
 .product__button {
-  margin-top: 17px;
+  margin-top: 8px;
 }
 
 .product__button span {
@@ -114,7 +116,7 @@
   }
 
   .filter-form__input:not(:last-child) {
-    margin-bottom: 52px;
+    margin-bottom: 1px;
   }
 
   .filter-form__input input[type="radio"] {
@@ -123,8 +125,8 @@
 
   .filter-form__input-radio {
     position: absolute;
-    width: 52px;
-    height: 52px;
+    width: 40px;
+    height: 40px;
     border: 2px solid #444444;
     border-radius: 50%;
   }
@@ -137,8 +139,8 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    width: 23px;
-    height: 23px;
+    width: 16px;
+    height: 16px;
     background-color: @lg;
     border-radius: 50%;
   }
@@ -147,13 +149,24 @@
     font-weight: @bold;
     font-size: 17px;
     line-height: 18px;
-    margin-left: 82px;
+    margin-left: 60px;
+  }
+
+  .filter-form__input:first-child span.type {
+    margin-top: 5px;
+  }
+
+  .filter-form__input:last-child span.type {
+    margin-top: 1px;
   }
 }
 
 .product__form-color {
-  .filter-form {
-    padding: 50px 0;
+  margin-top: -3px;
+  margin-bottom: 26px;
+
+  .filter-form__title {
+    margin-bottom: 17px;
   }
 
   .filter-form__input {
@@ -163,6 +176,10 @@
     height: 52px;
   }
 
+  .filter-form__input:not(:last-child) {
+    margin-bottom: 9px;
+  }
+
   .filter-form__input input[type="checkbox"] {
     appearance: none;
   }
@@ -170,8 +187,8 @@
   .filter-form__input-control {
     position: absolute;
     border: 2px solid #444444;
-    width: 52px;
-    height: 52px;
+    width: 38px;
+    height: 38px;
   }
 
   .filter-form__input-control svg {
@@ -195,7 +212,8 @@
     font-weight: @bold;
     font-size: 17px;
     line-height: 18px;
-    margin-left: 82px;
+    margin-left: 61px;
+    margin-top: 1px;
   }
 }
 
@@ -217,7 +235,7 @@
   }
 
   .product__form-options {
-    margin-bottom: 50px;
+    margin-bottom: 53px;
   }
 
   .product__form-options .form__filter {
@@ -235,20 +253,27 @@
     width: 100%;
   }
 
+  .product__input:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
   .product__input label {
     margin-right: 24px;
+    font-size: 19px;
   }
 
   .product__input input {
     width: 100%;
     padding-left: 18px;
+    font-size: 19px;
   }
 
   .product__form-options p {
-    margin-bottom: 63px;
+    margin-bottom: 82px;
     font-size: 17px;
     line-height: 30px;
     margin-top: 54px;
+    max-width: unset;
   }
 
   .product__button {
@@ -257,8 +282,8 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-top: 53px;
-    margin-bottom: 50px;
+    margin-top: 47px;
+    margin-bottom: 58px;
   }
 
   .product__button button,
@@ -266,29 +291,98 @@
     margin: 0;
   }
 
+  .product__button span {
+    font-size: 17px;
+  }
+
   .product__button button {
     width: 230px;
   }
 
   .product__form-type .form__filter .filter-form__list {
-    display: flex;
-    flex-direction: column;
+    display: block;
   }
 
   .product__form-color::before {
     display: block;
     height: 304px;
   }
+
+  .product__form-type .filter-form__input:first-child {
+    margin-top: -19px;
+  }
+
+  .product__form-type .filter-form__input:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  .product__form-type .filter-form__input-radio {
+    width: 50px;
+    height: 50px;
+  }
+
+  .product__form-type .filter-form__input input[type="radio"]:checked ~ .filter-form__input-radio::before {
+    width: 20px;
+    height: 20px;
+  }
+
+  .product__form-color .filter-form__input input[type="checkbox"]:checked ~ .filter-form__input-control svg {
+    top: 7px;
+  }
+
+  .product__form-type .filter-form__input span.type {
+    font-size: 19px;
+    margin-left: 77px;
+  }
+
+  .product__form-color .filter-form {
+    padding-top: 50px;
+  }
+
+  .product__form-color .filter-form__title span {
+    margin-top: 17px;
+  }
+
+  .product__form-color .filter-form__input-control {
+    width: 52px;
+    height: 52px;
+    margin-left: -2px;
+  }
+
+  .product__form-color .filter-form__input:nth-child(odd) {
+    margin-right: 14px;
+    width: 248px;
+  }
+
+  .product__form-color .filter-form__input {
+    flex-basis: unset;
+  }
+
+  .product__form-color .filter-form__input:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  .product__form-color .filter-form__input span.color {
+    font-size: 19px;
+    margin-top: 0;
+    margin-left: 80px;
+  }
+
+  .product__form-type .filter-form__input:first-child span.type {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .product {
-    padding: 0 50px;
+    padding: 0 50px 0 61px;
   }
 
   .product__form-color .filter-form__list {
     display: flex;
     flex-direction: row;
+    margin-top: -5px;
+    max-width: 826px;
   }
 
   .product__input {
@@ -297,15 +391,54 @@
   }
 
   .product__form-options p {
-    margin-left: 128px;
+    margin-left: 114px;
+    max-width: 702px;
+    margin-top: 100px;
   }
 
   .product__button {
     width: 700px;
     align-self: center;
+    margin-left: -11px;
+    margin-top: 43px;
   }
 
   .product__form-color::before {
     height: 228px;
+  }
+
+  .product__form-color .filter-form__title {
+    margin-right: 33px;
+  }
+
+  .product__form-color .filter-form__input:nth-child(odd) {
+    width: unset;
+    margin-right: 0;
+  }
+
+  .product__form-color .filter-form__input {
+    // min-width: 275px;
+    flex-basis: 30%;
+    margin-right: 0;
+  }
+
+  .product__form-color .filter-form__input:nth-child(1) {
+    margin-right: 15px;
+  }
+
+  .product__form-color .filter-form__input:nth-child(2) {
+    margin-right: 17px;
+  }
+
+  .product__form-color .filter-form__input:nth-child(4) {
+    margin-right: 15px;
+  }
+
+  .product__form-color .filter-form__input:nth-child(5) {
+    margin-right: 17px;
+  }
+
+  .product__form-color .filter-form__input span.color {
+    margin-top: 5px;
   }
 }
