--- a/source/less/general/header.less
+++ b/source/less/general/header.less
@@ -1,6 +1,6 @@
 .header__logo {
   text-align: center;
-  padding: 22px 30px;
+  padding: 22px 30px 17px;
 
   &--mobile {
     max-width: 86px;
@@ -26,6 +26,7 @@
     &--tablet {
       display: block;
       max-width: 113px;
+      margin-top: 7px;
     }
   }
 
@@ -56,7 +57,7 @@
     &--desktop {
       display: block;
       max-width: 150px;
-      margin: auto;
+      margin: 9px auto 0;
     }
 
     &--desktop svg {
