--- a/source/less/index/popular-desc.less
+++ b/source/less/index/popular-desc.less
@@ -37,6 +37,7 @@
 
   .popular-desc__img {
     display: block;
+    margin-top: 11px;
   }
 
   .popular-desc__text {
@@ -48,6 +49,8 @@
 
   .popular-desc__text p {
     margin-top: 0;
+    font-size: 17px;
+    line-height: 30px;
   }
 
   .popular-desc__text img {
@@ -66,19 +69,20 @@
 
 @media (min-width: @desktop-width) {
   .popular-desc__text {
-    margin-left: 15%;
+    margin-left: 14.5%;
   }
 
   .popular-desc__text p {
-    margin-top: 35px;
+    margin-top: 32px;
   }
 
   .popular-desc__text .popular__price {
-    margin-top: 124px;
+    margin-top: 112px;
   }
 
   .popular-desc__img {
-    margin-top: -100px;
+    margin-top: -121px;
+    margin-right: -32px;
   }
 
   .popular-desc__img img:nth-child(1) {
