--- a/source/less/index/contact-map.less
+++ b/source/less/index/contact-map.less
@@ -28,7 +28,7 @@
   display: block;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .contact-map {
     margin: 0;
   }
@@ -45,6 +45,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .contact-map {
+    margin-top: -79px;
+  }
+
   .contact-map__tablet {
     display: none;
   }
