--- a/source/less/index/contact.less
+++ b/source/less/index/contact.less
@@ -1,13 +1,18 @@
 .contact {
-  padding: 38px 30px;
+  padding: 33px 30px 38px;
 }
 
 .contact__title {
-  margin-bottom: 28px;
+  margin-bottom: 26px;
+}
+
+.contact__title svg {
+  display: none;
 }
 
 .contact__table {
-  margin-bottom: 63px;
+  margin-bottom: 60px;
+  margin-left: -3px;
 }
 
 .contact__table tr {
@@ -25,11 +30,11 @@
 }
 
 .contact__table tr:first-child {
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 }
 
 .contact__table tr td:first-child {
-  margin-right: 25px;
+  margin-right: 35px;
 }
 
 .contact__table-email {
@@ -46,7 +51,7 @@
 
 .contact__link {
   background-color: #ffffff;
-  padding: 16px 38px;
+  padding: 14px 38px;
   border: 2px solid #444444;
   text-align: center;
   color: #444444;
@@ -55,13 +60,14 @@
   font-weight: @bold;
   font-size: 17px;
   line-height: 20px;
-  margin-top: 55px;
+  margin-top: 42px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
+  letter-spacing: 1px;
 }
 
 .contact__table-email:hover {
@@ -74,22 +80,27 @@
 
 @media (min-width: @tablet-width) {
   .contact {
-    padding: 22px 0;
-    margin-top: 46px;
+    padding: 0;
+    margin-top: 62px;
   }
 
   .contact__table {
-    margin-bottom: 49px;
+    margin-bottom: 46px;
     width: 100%;
   }
 
   .contact__table tbody {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   .contact__table tr {
     width: 100%;
+    max-width: 314px;
+  }
+
+  .contact__table tr:first-child {
+    margin-right: 20px;
   }
 
   .contact__table tr td {
@@ -99,7 +110,8 @@
   .contact__link {
     padding: 14px 26px;
     width: 230px;
-    margin: 55px auto 57px;
+    margin: 55px auto 65px;
+    letter-spacing: 0;
   }
 
   .contact__link:hover {
@@ -116,15 +128,26 @@
     align-items: center;
     flex-direction: row-reverse;
     justify-content: space-between;
+    max-width: 665px;
+    margin-bottom: 38px;
+  }
+
+  .contact__title svg {
+    display: block;
+    margin-top: -15px;
+  }
+
+  .contact__table tr td:first-child {
+    margin-right: 27px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .contact {
-    padding: 70px 0 0 175px;
+    padding: 88px 0 0 175px;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 104px;
+    margin-bottom: 49px;
   }
 
   .contact__info {
@@ -138,6 +161,7 @@
     flex-direction: row;
     align-items: center;
     position: relative;
+    margin-bottom: 30px;
   }
 
   .contact__title h2 {
@@ -147,7 +171,7 @@
 
   .contact__title svg {
     position: absolute;
-    left: -40%;
+    left: -41%;
   }
 
   .contact__table tbody {
@@ -158,6 +182,8 @@
 
   .contact__info .contact__link {
     display: block;
+    margin-left: 0;
+    margin-top: 35px;
   }
 
   .contact__link {
