--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -3,7 +3,7 @@
 
   background-image: url("../img/index/hero-mobile@2x.webp");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0 -22px;
   background-size: cover;
 
   padding: 67px 30px 193px;
@@ -20,13 +20,14 @@
 .main__title--background-grey {
   // background-color: #f1f1f1;
   background-image: none;
-  padding: 101px 0 75px;
+  padding: 72px 0 75px;
   font-weight: @bold;
   font-size: 28px;
   line-height: 30px;
   color: #000000;
   text-align: center;
   position: relative;
+  letter-spacing: -0.6px;
 }
 
 .main__title--background-grey::before {
@@ -54,7 +55,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 119px;
+  height: 103px;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
 
@@ -81,10 +82,10 @@
 
     background-image: url("../img/index/hero-tablet@2x.webp");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 0% 0%;
     background-size: cover;
 
-    padding: 150px 0 372px;
+    padding: 156px 0 486px;
     margin: 0 -50px;
     font-size: 43px;
     line-height: 50px;
@@ -99,6 +100,7 @@
     line-height: 50px;
     margin: 0 -50px;
     padding: 101px 0 75px;
+    letter-spacing: 0.1px;
   }
 
   .main__title--background-grey::before {
@@ -115,6 +117,12 @@
 
   .main__item {
     flex-basis: 50%;
+    height: 119px;
+    padding: 24px 36px 31px 35px;
+  }
+
+  .main__item svg {
+    margin-top: 10px;
   }
 
   .main__item:hover {
@@ -132,12 +140,12 @@
   .main__title {
     background-image: url("../img/index/hero-desktop@2x.webp");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 0% 0%;
     background-size: cover;
 
     font-size: 53px;
     line-height: 57px;
-    padding: 150px 0 433px;
+    padding: 158px 0 470px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/index/hero-desktop@2x.webp");
@@ -152,14 +160,14 @@
     width: 100%;
     background-color: #f9f9f9;
     z-index: -1;
-    height: 685px;
+    height: 739px;
   }
 
   .main__title--background-grey {
     font-weight: 700;
-    font-size: 43px;
+    font-size: 53px;
     line-height: 50px;
-    padding: 101px 0 104px;
+    padding: 105px 0 100px;
     position: unset;
   }
 
