--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -1,5 +1,5 @@
 .reviews {
-  padding: 0 30px 45px 30px;
+  padding: 0 30px 34px;
   margin-top: 58px;
 }
 
@@ -34,13 +34,25 @@
   text-align: center;
 }
 
+.reviews__text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  color: #444444;
+  margin-bottom: 33px;
+
+  &--tablet {
+    display: none;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .reviews {
     background-image: url("../img/index/review.png");
     background-repeat: no-repeat;
     background-position: left;
-    padding: 82px 0 47px 50px;
-    margin: 0 0 68px -50px;
+    padding: 82px 0 53px 50px;
+    margin: 51px 0 68px -50px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/index/review-tablet@2x.png");
@@ -51,17 +63,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 40px;
-  }
-
-  .reviews p {
-    margin-bottom: 60px;
-    font-size: 17px;
+    margin-bottom: 35px;
   }
 
   .reviews__title .reviews__button {
-    padding: 14px 35px;
+    padding: 14px 36px;
     display: block;
+    margin-top: -10px;
   }
 
   .reviews__button {
@@ -76,16 +84,33 @@
   .reviews__button:active {
     color: rgba(255, 255, 255, 0.3);
   }
+
+  .reviews__text {
+    margin-bottom: 60px;
+    font-size: 17px;
+
+    &--mobile {
+      display: none;
+    }
+
+    &--tablet {
+      display: block;
+    }
+  }
 }
 
 @media (min-width: @desktop-width) {
   .reviews {
-    margin: 0 0 70px 0;
-    padding: 78px 0 96px 175px;
+    margin: 0 0 67px 0;
+    padding: 79px 0 101px 175px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/index/review-desktop@2x.png");
     }
+  }
+
+  .reviews__title {
+    margin-bottom: 31px;
   }
 
   .reviews__title h2 {
@@ -93,7 +118,9 @@
     line-height: 57px;
   }
 
-  .reviews p {
+  .reviews__text {
     font-size: 17px;
+    max-width: 814px;
+    margin-bottom: 43px;
   }
 }
